[gd_scene load_steps=2 format=3 uid="uid://b8hl7xp14ckok"]

[ext_resource type="Script" uid="uid://wvkrsm23xuko" path="res://scenes/combatUI/character_status_ui.gd" id="1_4pr60"]

[node name="CharacterStatusUI" type="Control"]
layout_mode = 3
anchor_right = 0.09
anchor_bottom = 0.148
offset_right = 0.319992
offset_bottom = 0.0960007
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("1_4pr60")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="StatusEffect" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
